# wasm-map-generator-demo

./: .gitignore  Cargo.toml  README.md  build_web  set_project_path.sh
.cargo/: config
src/: app.rs  lib.rs  main.rs
src/constants/: layers.rs  map.rs  mod.rs  player.rs  renderer.rs  theme.rs  tile.rs  window.rs
src/emscripten/: mod.rs
src/entities/: entity.rs  mod.rs  player.rs  tile.rs  unit.rs  utils.rs
src/generator/: diamond_square.rs  map.rs  mod.rs  utils.rs
src/input/: keyboard.rs  mod.rs  utils.rs
src/light/: circle.rs  intensity.rs  mod.rs
src/loader/: assets.rs  font.rs  mod.rs
src/primitives/: Line.rs
src/renderer/: mod.rs  renderer.rs  third_person.rs  top_down.rs  top_down_utils.rs  utils.rs
src/scenes/: game.rs  layer.rs  mod.rs
src/tests/: renderer.rs
src/ui/: minimap.rs  mod.rs
src/utils/: canvas.rs  main.rs  mod.rs  texture.rs  window.rs
template/: index.css  index.html
